# colored-macro

./: Cargo.toml  README.md
.github/workflows/: check.yml  release.yml
colored-macro/: Cargo.toml
colored-macro-impl/: Cargo.toml
colored-macro-impl/src/: lib.rs
colored-macro-tests/: Cargo.toml
colored-macro-tests/src/: lib.rs  parser.rs
colored-macro-tests/src/output/: mod.rs  test_no_colours.stdout  test_single_colour.stdout
colored-macro/src/: lib.rs
impl/: Cargo.toml
impl/src/: ansi.rs  lib.rs  parser.rs
impl/src/tests/: mod.rs
macro/: Cargo.toml
macro/src/: lib.rs
src/: ansi.rs  lib.rs  parser.rs
tests/: mod.rs
