[package]
name = "colored-macro"
description = "A macro to make colored text in the terminal using XML-like syntax"
authors = ["Jamalam <james@jamalam.tech>"]
repository = "https://github.com/Jamalam360/colored-macro"
categories = [
    "value-formatting",
    "template-engine",
    "command-line-interface"
]

edition = "2021"
version.workspace = true
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored-macro-macro = { version = "0.2.0", path = "macro" }

[workspace]
members = [".", "impl", "macro"]
default-members = [".", "impl"]

[workspace.package]
version = "0.2.0"
