[package]
name = "colored-macro-tests"
edition = "2021"
version = "0.0.0+UNVERSIONED"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored-macro = { path = "../colored-macro" }
colored-macro-impl = { path = "../colored-macro-impl" }
syn.workspace = true
gag = "1.0"
proc-macro2.workspace = true
