[package]
name = "colored-macro-macro"
description = "A macro to make colored text in the terminal using XML-like syntax. You should depend on the `colored-macro` crate instead."
authors = ["Jamalam <james@jamalam.tech>"]
repository = "https://github.com/Jamalam360/colored-macro"
categories = [
    "value-formatting",
    "template-engine",
    "command-line-interface"
]

edition = "2021"
version.workspace = true
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
colored-macro-impl = { version = "^0.2.0", path = "../impl" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[features]
no-color = ["colored-macro-impl/no-color"]
